--- a/001.HTML/012.Blue_PJ/css/common.css
+++ b/001.HTML/012.Blue_PJ/css/common.css
@@ -2,7 +2,7 @@
 /* 공통 */
 @import url('https://fonts.googleapis.com/css2?family=Cardo:wght@400;700&family=Oswald:wght@200;300;400;500;700&family=Permanent+Marker&display=swap');
 html,body,h1,h2,h3,h4,h5,h6,p,ul,ol,li,button{padding: 0;margin: 0;}
-body{font-family: 'Oswald', sans-serif;}
+html,body{font-family: 'Oswald', sans-serif; scroll-behavior: smooth;}
 ul,ol,li{list-style: none;}
 *{box-sizing: border-box;}
 a{color: #000; text-decoration: none;}
@@ -29,7 +29,7 @@ button{background: none; border: none; font-size: 1em; font-weight: 200; font-fa
     position: fixed;
     width: 40px;
     height: 55px;
-    left: 50%;
+    left: 96%;
     bottom: 3%;
     animation: down 2s linear infinite;
     text-align: center;
