--- a/001.HTML/012.Blue_PJ/css/common.css
+++ b/001.HTML/012.Blue_PJ/css/common.css
@@ -34,7 +34,7 @@ button{background: none; border: none; font-size: 1em; font-weight: 200; font-fa
     animation: down 2s linear infinite;
     text-align: center;
     cursor: pointer;
-    z-index: 999;
+    z-index: 99;
 }
 .cont .down:hover{
     animation: none;
@@ -140,7 +140,7 @@ button{background: none; border: none; font-size: 1em; font-weight: 200; font-fa
     transform: translateY(-50%);
     width: 4vw;
     height: 3vh;
-    z-index: 9999;
+    z-index: 9;
 }
 
 .menuBtn img{
@@ -153,6 +153,54 @@ button{background: none; border: none; font-size: 1em; font-weight: 200; font-fa
 
 .menuBtn img:hover{
     filter: grayscale(0)
+}
+
+.ham{
+    background: url(../images/menubar.png) no-repeat 50% 50%/cover;
+    position: fixed;
+    left: 0;
+    top: -100%;
+    z-index: 999;
+    width: 100%;
+    height: 100%;
+    transition: top .2s ease-in-out;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.ham.on{
+    top: 0;
+}
+.ham ul li a{
+    font-size: 40px;
+    font-weight: 500;
+    display: block;
+    text-align: center;
+    color: #6e6e6e;
+    padding: 15px 0;
+}
+.ham ul li a::after{
+    content: '';
+    display: block;
+    width: 0%;
+    height: 3px;
+    background: #004dff;
+    opacity: 0;
+    transition: all .5s ease-in-out;
+}
+.ham ul li a:hover::after{
+    width: 100%;
+    opacity: 1;
+}
+
+.ham .imgCont{
+    position: relative;
+    height: 29vh;
+}
+.ham .imgCont img{
+    width: 100%;
+    height: 100%;
+    border: 1px solid blue;
 }
 /* ------------------------cont1------------------------ */
 .cont1{
@@ -372,11 +420,10 @@ button{background: none; border: none; font-size: 1em; font-weight: 200; font-fa
 
 /* ------------------------footer------------------------ */
 .footer{
-    /* outline: 1px dotted hotpink; */
     margin: auto;
     margin-top: 50px;
     height: 200px;
-    width: 90vw;
+    width: 100%;
     font-size: 1em;
     font-weight: 200;
     position: relative;
@@ -385,6 +432,7 @@ button{background: none; border: none; font-size: 1em; font-weight: 200; font-fa
     display: flex;
     justify-content: space-between;
     height: 70%;
+    margin: 0 100px;
 }
 .footer .footLbx{
     font-size: 14px;
@@ -425,9 +473,7 @@ button{background: none; border: none; font-size: 1em; font-weight: 200; font-fa
 .footer .copy ul{
     width: 100%;
     font-size: .6em;
-}
-.footer .copy ul{
-    overflow: hidden;
+    margin-left: 100px;
 }
 .footer .copy ul li{
     float: left;
