--- a/001.HTML/012.Blue_PJ/css/common.css
+++ b/001.HTML/012.Blue_PJ/css/common.css
@@ -2,7 +2,7 @@
 /* 공통 */
 @import url('https://fonts.googleapis.com/css2?family=Cardo:wght@400;700&family=Oswald:wght@200;300;400;500;700&family=Permanent+Marker&display=swap');
 html,body,h1,h2,h3,h4,h5,h6,p,ul,ol,li,button{padding: 0;margin: 0;}
-html,body{font-family: 'Oswald', sans-serif; scroll-behavior: smooth;}
+html,body{font-family: 'Oswald', sans-serif; scroll-behavior: smooth; overflow-x: hidden;}
 ul,ol,li{list-style: none;}
 *{box-sizing: border-box;}
 a{color: #000; text-decoration: none;}
@@ -102,6 +102,27 @@ button{background: none; border: none; font-size: 1em; font-weight: 200; font-fa
 .wrapBox .cont.cont1{
     height: calc(100vh - 100px);
 }
+.cont .more{
+    font-size: 15px;
+    position: absolute;
+    width: auto;
+    bottom: 1.5%;
+    right: 5%;
+    z-index: 99;
+}
+.cont .more::after{
+    content: '';
+    display: block;
+    width: 0;
+    height: 1px;
+    background: #000;
+    opacity: 0;
+    transition: all .6s ease-in-out;
+}
+.cont .more:hover::after{
+    width: 100%;
+    opacity: 1;
+}
 .footer{
     width: 100%;
     height: 80px;
@@ -180,6 +201,7 @@ button{background: none; border: none; font-size: 1em; font-weight: 200; font-fa
 .ham.on{
     top: 0;
     opacity: 1;
+    overflow-y: hidden;
 }
 .ham ul{
     position: absolute;
@@ -189,6 +211,7 @@ button{background: none; border: none; font-size: 1em; font-weight: 200; font-fa
 .ham ul li a{
     font-size: 40px;
     font-weight: 500;
+    letter-spacing: 5px;
     display: block;
     text-align: center;
     color: #fff;
@@ -212,6 +235,12 @@ button{background: none; border: none; font-size: 1em; font-weight: 200; font-fa
     width: 100%;
     opacity: 1;
 }
+.ham ul li .rd{
+    color: red;
+}
+.ham ul li .rd:hover{
+    color: #fff;
+}
 .ham ul li .rd:hover::after{
     background-color: red;
 }
@@ -224,6 +253,14 @@ button{background: none; border: none; font-size: 1em; font-weight: 200; font-fa
     width: 100%;
     height: 100%;
 }
+/* #close{
+    position: absolute;
+    color: #fff;
+    font-size: 40px;
+    top: 2%;
+    right: 2%;
+    z-index: 999;
+} */
 /* ------------------------cont1------------------------ */
 .cont1{
     display: flex;
