--- a/001.HTML/012.Blue_PJ/css/common.css
+++ b/001.HTML/012.Blue_PJ/css/common.css
@@ -133,7 +133,7 @@ button{background: none; border: none; font-size: 1em; font-weight: 200; font-fa
     height: 80px;
 }
 
-/* 헤더 */
+/* --------------------------헤더-------------------------- */
 .header{
     position: relative;
     padding: 0 20px;
