--- a/001.HTML/012.Blue_PJ/css/artist.css
+++ b/001.HTML/012.Blue_PJ/css/artist.css
@@ -21,6 +21,7 @@
 .art1 .aWrap .info{
     margin-left: 150px;
     font-size: 2em;
+    width: 450px;
 }
 .art1 .aWrap .info .inT li+li{
     padding-top: 50px;
