--- a/001.HTML/010.Pj_BIFF/css/sub4.css
+++ b/001.HTML/010.Pj_BIFF/css/sub4.css
@@ -106,6 +106,10 @@ abbr {
     margin-top: 10px;
 }
 
+.gnb2 .lb li:first-child {
+    padding-right: 30px;
+}
+
 @keyframes menuAni {
     to {
         width: 500px;
