--- a/001.HTML/012.Blue_PJ/css/media.css
+++ b/001.HTML/012.Blue_PJ/css/media.css
@@ -230,11 +230,13 @@
     .cont1{
         display: none;
     }
+    .cont1>div{
+        position: static;
+    }
     .cont.cont1.media{
         display: block;
         width: 370px;
         margin: 0 auto;
-        position: relative;
     }
     .cont1.media .mainC{
         width: 100%;
@@ -257,8 +259,7 @@
     }
 
     .cont1 .mainC .mainImgC2{
-        position: relative;
-        bottom: 0;
+        position: static;
         filter: grayscale(0);
     }
     .cont1.media .mainC2{
@@ -272,14 +273,13 @@
     .cont1.media .mainL{
         display: flex;
         width: 100%;
-        position: absolute;
-        bottom: 100px;
         padding: 0;
     }
     .cont1.media .mainL .mainImg2{
-        width: 100%;
-        height: 100px;
+        /* width: 100%; */
+        /* height: 100px; */
         filter: grayscale(.2);
+        margin-top: 10px;
     }
 
 }
