--- a/001.HTML/012.Blue_PJ/css/media.css
+++ b/001.HTML/012.Blue_PJ/css/media.css
@@ -380,10 +380,11 @@
         height: 200px;
     }
     .footer {
-        height: 100px;
+        height: 90px;
     }
     .footer .footInfo {
         font-size: 6px;
+        height: 60%;
     }
     .footer .footLbx .lang ul {
         right: 25px;
