--- a/001.HTML/012.Blue_PJ/css/media.css
+++ b/001.HTML/012.Blue_PJ/css/media.css
@@ -226,6 +226,10 @@
         font-size: 9px;
     }
 
+    .header h2.title.subH2 {
+        font-size: 12px;
+    }
+
     .header .title {
         line-height: 70px;
     }
