--- a/001.HTML/012.Blue_PJ/css/artist.css
+++ b/001.HTML/012.Blue_PJ/css/artist.css
@@ -1,38 +1,122 @@
 @charset 'utf-8';
-.art1 .aWrap{
+
+main.art1 {
+    width: 1300px;
+    margin: 0 auto;
+}
+
+.art1 .aWrap {
     padding-top: 30px;
     display: flex;
     justify-content: center;
 }
-.art1 .aWrap .yves{
+
+.art1 .aWrap .yves {
     padding-top: 57.5px;
     width: 500px;
     height: 350px;
 }
-.art1 .aWrap .yves.col{
+
+.art1 .aWrap .yves.col {
     width: 320px;
     height: 445px;
     padding-top: 0;
 }
-.art1 .yves img{
+
+.art1 .yves img {
     width: 100%;
     height: 100%;
 }
-.art1 .aWrap .info{
+
+.art1 .aWrap .info {
     margin-left: 150px;
     font-size: 2em;
     width: 450px;
 }
-.art1 .aWrap .info .inT li+li{
+
+.art1 .aWrap .info .inT li+li {
     padding-top: 50px;
 }
 
-.art1 .aWrap .info .inT i{
+.art1 .aWrap .info .inT i {
     font-family: 'Alkatra', system-ui;
     font-weight: 400;
 }
-.art1 .bWrap{
-    width: 70%;
+
+.art1 .bWrap {
+    width: 80%;
     margin: 0 auto;
     padding: 50px;
+}
+
+@media only screen and (max-width: 1024px) {
+    main.art1 {
+        width: 800px;
+    }
+
+    .art1 .aWrap .yves.col {
+        height: 380px;
+    }
+
+    .art1 .aWrap .info {
+        font-size: 1.7em;
+    }
+
+    .art1 .bWrap {
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    main.art1 {
+        width: 630PX;
+    }
+    .art1 .aWrap .yves.col {
+        height: 340px;
+    }
+    .art1 .aWrap .info {
+        margin-left: 60px
+    }
+    .art1 .aWrap .info {
+        font-size: 1.5em;
+    }
+}
+
+@media only screen and (max-width: 425px) {
+    main.art1 {
+        width: 350PX;
+    }
+    .art1 .aWrap .yves.col {
+        height: 200px;
+    }
+    .art1 .aWrap .info {
+        margin-left: 30px;
+        font-size: .9em;
+    }
+    .art1 .aWrap .info .inT li+li {
+        padding-top: 30px;
+    }
+    .art1 .bWrap {
+        padding: 25px;
+        font-size: 14px;
+    }
+}
+
+@media only screen and (max-width: 375px) {
+    main.art1 {
+        width: 315PX;
+    }
+    .art1 .aWrap .yves.col {
+        height: 170px;
+    }
+    .art1 .aWrap .info {
+        font-size: .7em;
+    }
+    .art1 .aWrap .info .inT li+li {
+        padding-top: 20px;
+    }
+    .art1 .bWrap {
+        padding: 20px;
+        font-size: 11px;
+    }
 }
