--- a/001.HTML/012.Blue_PJ/css/artist.css
+++ b/001.HTML/012.Blue_PJ/css/artist.css
@@ -43,7 +43,9 @@ main.art1 {
 }
 
 .art1 .bWrap {
-    width: 80%;
+    width: 100%;
     margin: 0 auto;
-    padding: 50px;
+    padding: 50px 0;
+    display: flex;
+    justify-content: flex-start;
 }
